Add: Second repo files
Added files from second repo

--- a/Week 2/cise_ass1a_worksheet2-frontend/.github/workflows/ci.yml
+++ b/Week 2/cise_ass1a_worksheet2-frontend/.github/workflows/ci.yml
@@ -5,7 +5,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-
+  
+# unnecessary comment to test yaml
 jobs:
   build:
     runs-on: ubuntu-latest
