--- a/week3/package.json
+++ b/week3/package.json
@@ -23,6 +23,7 @@
     "@koa/router": "^12.0.0",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
     "koa": "^2.14.2",
